--- a/tools.yaml
+++ b/tools.yaml
@@ -1636,7 +1636,7 @@
   categories:
     - opensource
     - analysis
-- name: Abom
+- name: Vulert Abom
   publisher: Vulert.com
   description: Vulert's Abom scanner can monitor and alert you in real-time for open-source vulnerabilities in your software, without requiring access to your code or installation. It uses only an SBOM or manifest file, such as a package-lock.json file. No signup is required.
   websiteUrl: https://vulert.com/abom
