Removed redundant words from tool's title in tools.yaml
for AI SBOM Generator, removed "AIBOM, AI/ML-BOM" from it's title (since it's mentioned in the description).

Signed-off-by: a1c00l <h@aetheris.ai>

--- a/tools.yaml
+++ b/tools.yaml
@@ -2169,7 +2169,7 @@
   categories:
     - proprietary
     - distribute
-- name: AI SBOM (AIBOM, ML-BOM) Generator
+- name: AI SBOM Generator
   publisher: Aetheris AI
   description: Generate AI SBOM (AIBOM, AI/ML-BOM) in CycloneDX format for models on Hugging Face.
   repoUrl: http://sbom.aetheris.ai
