--- a/.github/workflows/publish_toolcenter.yml
+++ b/.github/workflows/publish_toolcenter.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "tools.json"
       - ".github/workflows/publish_toolcenter.yml"
+  workflow_call:
   workflow_dispatch:
 
 # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/controlling-permissions-for-github_token
