--- a/.github/workflows/validate_tools.yml
+++ b/.github/workflows/validate_tools.yml
@@ -17,6 +17,10 @@ on:
 # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/controlling-permissions-for-github_token
 permissions: { }
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   validate:
     name: validate each tool
