--- a/.github/workflows/validate_tools_json.yml
+++ b/.github/workflows/validate_tools_json.yml
@@ -18,6 +18,10 @@ on:
 # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/controlling-permissions-for-github_token
 permissions: { }
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   validate:
     runs-on: ubuntu-latest
