--- a/.github/workflows/publish_toolcenter.yml
+++ b/.github/workflows/publish_toolcenter.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - "tools.json"
       - ".github/workflows/publish_toolcenter.yml"
-  workflow_call:
   workflow_dispatch:
 
 # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/controlling-permissions-for-github_token
@@ -14,7 +13,8 @@ permissions: { }
 
 jobs:
   trigger_deploy:
+    name: deploy
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Cloudflare Deploy Hook
-        run: curl -X POST "${{ secrets.CLOUDFLARE_DEPLOY_HOOK }}"
+        run: curl -X POST '${{ secrets.CLOUDFLARE_DEPLOY_HOOK }}'
